# Python_package_news

./: README.md  config.yaml  pyproject.toml  state.json
.github/workflows/: newsletter.yml
newsletters/: 2025-12-02.md  2026-01-01.md  2026-02-01.md
src/newsletter/: __init__.py  cli.py  config.py  filtering.py  github_client.py  models.py  pipeline.py  pypi_client.py  render.py  state.py
